--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.10",
-    "firebase-react-hooks": "^0.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3",
     "react-scripts": "5.0.0",
     "react-tinder-card": "^1.4.5",
     "react-transition-group": "1.x",
